# gobject_introspection_example

./: Makefile  README.md  meson.build
src/: girtest_object.c  girtest_object.h
